--- a/src/app/components/app/app.component.html
+++ b/src/app/components/app/app.component.html
@@ -1,3 +1,11 @@
-<main class="container mt-4">
-    <router-outlet></router-outlet>
-</main>
+<div class="container-fluid load" *ngIf="this.loadService.loading_page; else success">
+    <div class="row load">
+        <app-loading class="m-auto text-center"></app-loading>
+    </div>
+</div>
+
+<ng-template #success>
+    <main class="container mt-4">
+        <router-outlet></router-outlet>
+    </main>
+</ng-template>
