--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,32 +1,60 @@
 <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-6 mx-auto">
-        <div class="card">
-            <div class="card-body">
-                <form (submit)="login($event)">
-                    <div class="input-group mb-3">
-                        <input type="email" [(ngModel)]="data.email" name="email" class="form-control" placeholder="Correo electronico">
-                        <div class="input-group-append">
-                            <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-                        </div>
-                    </div>
-
-                    <div class="input-group mb-3">
-                        <input type="password" [(ngModel)]="data.password" name="password" class="form-control" placeholder="Contraseña">
-                        <div class="input-group-append">
-                            <span class="input-group-text"><i class="fa fa-lock"></i></span>
-                        </div>
-                    </div>
-
-                    <div class="mb-3 text-center">
-                        <a routerLink="/register" class="btn btn-link">registrarme</a>
-                    </div>
-
-                    <button type="submit" class="btn btn-block btn-success">
-                        Entrar
-                        
-                    </button>
-                </form>
+  <div class="col-sm-12 col-md-8 col-lg-6 mx-auto">
+    <div class="card">
+      <div class="card-body">
+        <form (submit)="login($event)">
+          <div class="input-group mb-3">
+            <input
+              type="email"
+              [(ngModel)]="data.email"
+              name="email"
+              class="form-control"
+              placeholder="Correo electronico"
+            />
+            <div class="input-group-append">
+              <span class="input-group-text"
+                ><i class="fas fa-envelope"></i
+              ></span>
             </div>
-        </div>
+          </div>
+
+          <div class="input-group mb-3">
+            <input
+              type="password"
+              [(ngModel)]="data.password"
+              name="password"
+              class="form-control"
+              placeholder="Contraseña"
+            />
+            <div class="input-group-append">
+              <span class="input-group-text"><i class="fa fa-lock"></i></span>
+            </div>
+          </div>
+
+          <div class="mb-3 text-center">
+            <a routerLink="/register" class="btn btn-link">registrarme</a>
+          </div>
+
+          <div>
+            <div *ngIf="loading; else success">
+                <button type="submit" class="btn btn-block btn-success" disabled>
+                  <div>
+                    <span class="spinner-border spinner-border-sm"></span>
+                    Entrando...
+                  </div>
+                </button>
+              </div>
+    
+              <ng-template #success>
+                <button type="submit" class="btn btn-block btn-success">
+                  Entrar
+                </button>
+              </ng-template>
+              
+          </div>
+
+        </form>
+      </div>
     </div>
+  </div>
 </div>
